[package]
name = "curvine-tests"
version = "0.1.0"
edition = "2021"

[features]
# Enable OSS-HDFS backend specific tests / code paths (Jindo-based).
# This is used by `#[cfg(feature = "oss-hdfs")]` in integration tests.
oss-hdfs = ["curvine-ufs/oss-hdfs"]

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-server = { workspace = true }
curvine-client = { workspace = true }
curvine-ufs = { workspace = true }
tokio  = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
awaitility = "0.4"
tempfile = { workspace = true }
